--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -7,7 +7,7 @@ add_clang_subdirectory(clang-format-vs)
 add_clang_subdirectory(clang-fuzzer)
 add_clang_subdirectory(clang-import-test)
 add_clang_subdirectory(clang-offload-bundler)
-
+add_clang_subdirectory(Racer)
 add_clang_subdirectory(c-index-test)
 
 if(CLANG_ENABLE_ARCMT)
